PR 7 — Publish framework configuration through the Sidecar Console